--- a/20210311/1/index.htm
+++ b/20210311/1/index.htm
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="module" src='main.js'></script>
+    <script type="module" src='/front/main.js'></script>
     <title>SQL_NODEJS</title>
 </head>
 <body>
