--- a/SQLDemo/index.htm
+++ b/SQLDemo/index.htm
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="module" src='main.js'></script>
-    <title>SQL_DEMO</title>
+    <script type="module" src='Front/main.js'></script>
+    <title>SQLDemo</title>
 </head>
 <body>
     <div id="main"></div>
