--- a/SQLFinalPrj/Front/index.htm
+++ b/SQLFinalPrj/Front/index.htm
@@ -13,4 +13,10 @@
     <div id="main"></div>
     <div id="result" style="margin: 5px 0 0 0;"></div>
 </body>
+
+<style>
+    .x{
+        margin: 0 0 0 5px;
+    }
+</style>
 </html>
