--- a/20210521/index.htm
+++ b/20210521/index.htm
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="./calculator.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
-    <title>a</title>
+    <title>calculator</title>
 </head>
 
 <body>
