--- a/ReactPractice/20220509/index.html
+++ b/ReactPractice/20220509/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/src/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.0.3/tocas.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.0.3/tocas.min.js"></script>
-  <title>Vite App</title>
+  <title>React App</title>
 </head>
 
 <body>
