--- a/20210308/1/index.htm
+++ b/20210308/1/index.htm
@@ -13,9 +13,9 @@
     <title>ddd</title>
     <style>
         .lbl1{
-            position: absolute;
-            text-align: center;
-            margin: 10px 0 0 0;
+            position: absolute
+            text-align: center
+            margin: 10px 0 0 0
         }
     </style>
 </head>
